--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "",
   "type": "module",
-  "main": "coin_scan_binance.js",
+  "main": "coin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,10 +28,6 @@
   },
   "homepage": "https://github.com/marginyu/xiaomei666#readme",
   "dependencies": {
-    "@moncici/date-time-processor": "^1.0.3",
-    "@moncici/log": "^1.0.2",
-    "@moncici/proxy": "^1.0.3",
-    "@moncici/sleep": "^1.0.1",
     "feishu-notifier": "^1.0.3"
   }
 }
